--- a/wercker.yml
+++ b/wercker.yml
@@ -63,7 +63,7 @@ deploy-to-cluster:
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true
+        command: delete namespace $COWWEB_NAMESPACE --ignore-not-found=true
 
     - script:
         name: wait to delete namespace
@@ -74,18 +74,18 @@ deploy-to-cluster:
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create namespace $WERCKER_APPLICATION_OWNER_NAME
+        command: create namespace $COWWEB_NAMESPACE
 
     - kubectl:
         name: create deplyoment
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create -f $WERCKER_ROOT/manifests --namespace=$WERCKER_APPLICATION_OWNER_NAME
+        command: create -f $WERCKER_ROOT/manifests --namespace=$COWWEB_NAMESPACE
 #
     - kubectl:
         name: get LoadBalancer public IP address
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: get svc -o jsonpath='{.items[*].status.loadBalancer.ingress[*].ip}' --namespace=$WERCKER_APPLICATION_OWNER_NAME
+        command: get svc -o jsonpath='{.items[*].status.loadBalancer.ingress[*].ip}' --namespace=$COWWEB_NAMESPACE
